@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=2
 PKG_MINOR=9
-PKG_REVISION=7
+PKG_REVISION=8
 PKG_BUILD=1
